cros:Peeking Launcher:webstore search

Include the header file instead of the cc file in search_controller_factory.cc.

Bug: 756484
Change-Id: I11fee5ca367165b622f186971e3040161d0faef3
Reviewed-on: https://chromium-review.googlesource.com/619269
Reviewed-by: Elijah Taylor <elijahtaylor@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495244}